--- a/nodejs-app/Jenkinsfile.template
+++ b/nodejs-app/Jenkinsfile.template
@@ -32,7 +32,7 @@ pipeline {
       }
       input {
         message "Should we deploy?"
-        submitter "beedemo-ops"
+        submitter "YAE001"
         submitterParameter "APPROVER"
       }
       steps {
