--- a/nodejs-app/Jenkinsfile.template
+++ b/nodejs-app/Jenkinsfile.template
@@ -32,11 +32,11 @@ pipeline {
       }
       input {
         message "Should we deploy?"
-        submitter "YAE001"
+        submitter "bismirle"
         submitterParameter "APPROVER"
       }
       steps {
-        echo "Continuing with deployment"
+        echo "Continuing with deployment - approved by ${APPROVER}"
       }
     }
   }
