--- a/nodejs-app/Jenkinsfile.template
+++ b/nodejs-app/Jenkinsfile.template
@@ -13,6 +13,7 @@ pipeline {
       echo "Why didn't you push my button?"
     }
   }
+  stages{
     stage('Tests') {
       parallel {
         stage('Web Tests') {
